--- a/jsnack2/index.html
+++ b/jsnack2/index.html
@@ -5,7 +5,7 @@
     <title>Esercizio2 Js</title>
   </head>
   <body>
-    <div class="mioid">
+    <div id="mioid">
 
     </div>
     <script type="text/javascript" src="js/main.js">
