--- a/jsnackDue2/index.html
+++ b/jsnackDue2/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Esercizio4 Js</title>
+    <title>Esercizio Js</title>
   </head>
   <body>
     <div id="mioid">
